# DDT

./: .gitignore  README.md
.github/workflows/: meson.yml
cpp/: meson.build
cpp/cmd/: benchmark_alphazero.cpp  cli.cpp  test_alphazero_mcts_node.cpp  test_binary_print.cpp  test_game_quoridor.cpp  test_lemke_howson.cpp  test_libtorch_cpu_basic.cpp
cpp/core/algorithm/: strategy_alphazero.h  strategy_random.h
cpp/core/examples/: game_quoridor.h
cpp/core/util/: binary_print.h  common.h  floating.h  lemke_howson.h  processor_count.h  pytorch.h  xxhash64.h
cpp/misc/: alphazero_selfplay_quoridor.cpp  selfplay_quoridor.cpp
cpp/testdata/: quoridor_canonical_testcase.pt
python/: train.py
scripts/: clean-github-workspace.sh  prepare-github-workspace.sh  run-tests-with-multiple-quoridor-board-size.sh
